# vllm-cost-meter

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  system-design.md
.github/workflows/: tests.yml
data/: README.md  c2_stability_cv.csv  master_results.csv  master_results_v2.csv
reports/Security/: security-scan-2026-05-06.md
simulation/: send_requests.py
tests/: test_cli_flags.py  test_cost.py  test_curves_schema.py  test_detector.py  test_scraper.py  test_server.py
tests/fixtures/: vllm_metrics_full.txt
vllm_cost_meter/: __init__.py  __main__.py  cost.py  detector.py  display.py  logger.py  scraper.py  server.py
vllm_cost_meter/data/: api_pricing.yaml  benchmark_curves.yaml
