[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-cost-meter"
version = "1.1.1"
description = "Live effective cost-per-million-tokens meter for vLLM inference servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Chitral Patil", email = "cpatil.research@gmail.com" }]
keywords = ["llm", "vllm", "cost", "gpu", "benchmarking", "inference"]
dependencies = [
    "requests>=2.33.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vllm-cost-meter = "vllm_cost_meter.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_cost_meter*"]

[tool.setuptools.package-data]
vllm_cost_meter = ["data/*.yaml"]
